some spacing issues

--- a/my-portfolio-stylesheet.css
+++ b/my-portfolio-stylesheet.css
@@ -8,7 +8,7 @@ html{
   scroll-behavior: smooth;
 }
 body{
-  margin-top: 60px;
+  
   background-image: url("assets/darkbg.jpg");
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
